# Babes-Bolyai-University

./: .gitignore  README.md
Semester 1/Algebra/P3/: main.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
Semester 1/Algebra/P5/: main.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
Semester 1/FP/Lecture 1/: basics.py
Semester 1/Fundamentals of Programming/Exam - Snake Game/: README.md
Semester 1/Fundamentals of Programming/Seminars/: seminar06.py  seminar_05.py
Semester 2/Data Structures and Algorithms/Labs/Lab01/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp  FixedCapBiMapIterator.h  ShortTest.cpp
Semester 2/Data Structures and Algorithms/Labs/Lab02/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp  ShortTest.h
Semester 2/Data Structures and Algorithms/Labs/Lab05/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  ShortTest.h
Semester 2/Graph Algorithms/Practical-Work_01/: start.py
Semester 2/Object Oriented Programming/Exam/: CMakeLists.txt  doctors.txt  patients.txt
Semester 2/Object Oriented Programming/Exam/include/: doctorSession.h  doctorWindow.h  domain.h  repository.h  service.h  subject.h
Semester 2/Object Oriented Programming/Exam/src/: main.cpp
Semester 2/Object Oriented Programming/Labs/A2-3/: CMakeLists.txt
Semester 2/Object Oriented Programming/Labs/A2-3/app/: main.c
Semester 2/Object Oriented Programming/Labs/A2-3/include/domain/: date.h  dynamicArray.h  material.h  operation.h
Semester 2/Object Oriented Programming/Labs/A2-3/include/repository/: repository.h  undoRedoRepository.h
Semester 2/Object Oriented Programming/Labs/A2-3/include/service/: service.h
Semester 2/Object Oriented Programming/Labs/A2-3/include/tests/: tests.h
Semester 2/Object Oriented Programming/Labs/A2-3/include/ui/: ui.h
Semester 2/Object Oriented Programming/Labs/A2-3/src/domain/: date.c  dynamicArray.c  material.c  operation.c
Semester 2/Object Oriented Programming/Labs/A2-3/src/repository/: repository.c  undoRedoRepository.c
Semester 2/Object Oriented Programming/Labs/A2-3/src/service/: service.c
Semester 2/Object Oriented Programming/Labs/A2-3/src/tests/: tests.c
Semester 2/Object Oriented Programming/Labs/A2-3/src/ui/: ui.c
Semester 2/Object Oriented Programming/Labs/A4-5/: CMakeLists.txt  README.md  gcovr.cfg
Semester 2/Object Oriented Programming/Labs/A4-5/app/: main.cpp
Semester 2/Object Oriented Programming/Labs/A4-5/include/domain/: dynamicVector.h  movie.h
Semester 2/Object Oriented Programming/Labs/A4-5/include/repository/: repository.h
Semester 2/Object Oriented Programming/Labs/A4-5/include/service/: service.h
Semester 2/Object Oriented Programming/Labs/A4-5/include/ui/: ui.h
Semester 2/Object Oriented Programming/Labs/A4-5/src/domain/: movie.cpp
Semester 2/Object Oriented Programming/Labs/A4-5/src/repository/: repository.cpp
Semester 2/Object Oriented Programming/Labs/A4-5/src/service/: service.cpp
Semester 2/Object Oriented Programming/Labs/A4-5/src/ui/: ui.cpp
Semester 2/Object Oriented Programming/Labs/A4-5/tests/: tests.cpp  tests.h
Semester 2/Object Oriented Programming/Labs/A6-7/: CMakeLists.txt  README.md  movies.txt
Semester 2/Object Oriented Programming/Labs/A6-7/app/: main.cpp
Semester 2/Object Oriented Programming/Labs/A6-7/include/exceptions/: domainExceptions.h  repoExceptions.h
Semester 2/Object Oriented Programming/Labs/A6-7/include/repository/: fileRepository.h  repository.h
Semester 2/Object Oriented Programming/Labs/A6-7/include/service/: service.h
Semester 2/Object Oriented Programming/Labs/A6-7/include/ui/: ui.h
Semester 2/Object Oriented Programming/Labs/A6-7/src/domain/: movie.cpp
Semester 2/Object Oriented Programming/Labs/A6-7/src/repository/: fileRepository.cpp  repository.cpp
Semester 2/Object Oriented Programming/Labs/A6-7/src/service/: service.cpp
Semester 2/Object Oriented Programming/Labs/A6-7/src/ui/: ui.cpp
Semester 2/Operating Systems/Course/: h.h
Semester 2/Operating Systems/Lab Test 1 Practice/: matrix-from-binary.c  matrix-from-text.c
Semester 2/Operating Systems/Lab_Test_1_Practice/: hello-remember.c  matrix-to-binary.c
Semester 2/Operating Systems/Lab_exam_2_practice/: sol1.c
Semester 2/Operating Systems/Lab_exam_3_practice/: ex2  ex2.c  ex3.c  ex4.c  example  example.c
Semester3/Advanced_Programming_Methods/WrittenPrep/: Main.java
Semester3/Databases/: A1.ipynb  A2.ipynb  A3.ipynb  A4.ipynb  A5.sql  Bank.ipynb  LabTestPrep.ipynb
Semester3/Databases/A1/: A1  A1.sql
Semester3/Databases/CakeStore/: 1.sql  2.sql  3.sql
Semester3/Databases/Cinema/: 1.sql  2.sql  3.sql  4.sql
Semester3/Databases/PracticalTest/: 1.sql  2.sql  3.sql  4.sql
Semester3/Databases/Shoes/: 1.sql  2.sql  3.sql  4.sql
Semester3/Databases/Trains/: 1.sql  2.sql
Semester3/Databases/Zoo/: 1.sql  2.sql  3.sql  4.sql
Semester4/DBMS/Lab/: 1.sql  seed_f1_2025.sql
(+1304 files in other folders)
